--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,14 @@
 	// See https://go.microsoft.com/fwlink/?LinkId=759670
 	// for the documentation about the jsconfig.json format
 	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
-		"allowSyntheticDefaultImports": true
+    "target": "es6",//es6
+    "module": "system",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false
 	},
 	"exclude": [
 		"node_modules",
@@ -12,5 +17,6 @@
 		"jspm_packages",
 		"tmp",
 		"temp"
-	]
+	],
+	"esversion": 6
 }
