--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-vimeo-embed",
-  "version": "1.2.0",
-  "description": "Vue.js and YouTube",
-  "main": "lib/vue-vimeo-embed.js",
+  "name": "vue-hypercomments",
+  "version": "1.0.0",
+  "description": "Vue.js Hypercomments plugin",
+  "main": "lib/vue-hypercomments.js",
   "scripts": {
     "lint": "eslint src/index.js",
     "test": "",
@@ -18,9 +18,9 @@
   "keywords": [
     "Vue.js",
     "vue",
-    "Vimeo",
-    "vimeo",
-    "embed"
+    "hypercomments",
+    "Hypercomments",
+    "comments"
   ],
   "author": "Rikcon",
   "license": "MIT",
@@ -49,10 +49,10 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rikcon/vue-vimeo-embed.git"
+    "url": "git+https://github.com/Rikcon/vue-hypercomments.git"
   },
   "bugs": {
-    "url": "https://github.com/Rikcon/vue-vimeo-embed/issues"
+    "url": "https://github.com/Rikcon/vue-hypercomments/issues"
   },
-  "homepage": "https://github.com/Rikcon/vue-vimeo-embed#readme"
+  "homepage": "https://github.com/Rikcon/vue-hypercomments#readme"
 }
